--- a/index.html
+++ b/index.html
@@ -4,30 +4,148 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project01</title>
-    <header>
-        <div class="container">
-            <h1>GridIron Metrics</h1>
-        </div>
-        <nav>
-            <li>teams</li>
-            <li>players</li>
-            <li>scores</li>
-        </nav> 
-    </header>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>GridIron Metrics</h1>         
+        </div>
+      </div>
+      <div class="col-12">
+        <div>
+          <nav>
+              <ul class="nav justify-content-center">
+                <li class="nav-item-dropdown">
+                  <a class="nav-link dropdown-toggle" href="" id="teamsdropdown" data-bs-toggle="dropdown">
+                    teams
+                  </a>
+                  <div class="dropdown-menu p-4" style="width: 800px;max-height: 500px; overflow-y: auto;">
+                    <h6 class="font-weight-bold">AFC</h6>
+                    <div class="row mb-3">
+                      <div class="col-md-3">
+                        <h6 class="dropdown-header">AFC North</h6>
+                        <a class="dropdown-item" href="">Cincinnati Bengals</a>
+                        <a class="dropdown-item" href="">Baltimore Ravens</a>
+                        <a class="dropdown-item" href="">Cleveland Browns</a>
+                        <a class="dropdown-item" href="">Pittsburgh Steelers</a>
+                      </div>
+                      <div class="col-md-3">
+                        <h6 class="dropdown-header">AFC West</h6>
+                        <a class="dropdown-item" href="">Kansas City Chiefs</a>
+                        <a class="dropdown-item" href="">Los Angeles Charges</a>
+                        <a class="dropdown-item" href="">Las Vegas Raiders</a>
+                        <a class="dropdown-item" href="">Denver Broncos</a>
+                      </div>
+                      <div class="col-md-3">
+                        <h6 class="dropdown-header">AFC East</h6>
+                        <a class="dropdown-item" href="">Buffalo Bills</a>
+                        <a class="dropdown-item" href="">Miami Dolphins</a>
+                        <a class="dropdown-item" href="">New England Patriots</a>
+                        <a class="dropdown-item" href="">New York Jets</a>
+                      </div>
+                      <div class="col-md-3">
+                        <h6 class="dropdown-header">AFC South</h6>
+                        <a class="dropdown-item" href="">Houston Texans</a>
+                        <a class="dropdown-item" href="">Indianapolis Colts</a>
+                        <a class="dropdown-item" href="">Jacksonville Jaguars</a>
+                        <a class="dropdown-item" href="">Tennessee Titans</a>
+                      </div>
+                    </div>
+                    <div class="dropdown divider"></div>
+                    <h6 class="font-weight-bold">NFC</h6>
+                      <div class="row mb-3">
+                        <div class="col-md-3">
+                            <h6 class="dropdown-header">NFC North</h6>
+                            <a class="dropdown-item" href="">Chicago Bears</a>
+                            <a class="dropdown-item" href="">Detroit Lions</a>
+                            <a class="dropdown-item" href="">Green Bay Packers</a>
+                            <a class="dropdown-item" href="">Minnesota Vikings</a>
+                        </div>
+                        <div class="col-md-3">
+                            <h6 class="dropdown-header">NFC West</h6>
+                            <a class="dropdown-item" href="">Arizona Cardinals</a>
+                            <a class="dropdown-item" href="">Los Angeles Rams</a>
+                            <a class="dropdown-item" href="">San Francisco 49ers</a>
+                            <a class="dropdown-item" href="">Seattle Seahawks</a>
+                        </div>
+                        <div class="col-md-3">
+                            <h6 class="dropdown-header">NFC East</h6>
+                            <a class="dropdown-item" href="">Dallas Cowboys</a>
+                            <a class="dropdown-item" href="">New York Giants</a>
+                            <a class="dropdown-item" href="">Philadelphia Eagles</a>
+                            <a class="dropdown-item" href="">Washington Commanders</a>
+                        </div>
+                        <div class="col-md-3">
+                            <h6 class="dropdown-header">NFC South</h6>
+                            <a class="dropdown-item" href="">Atlanta Falcons</a>
+                            <a class="dropdown-item" href="">Carolina Panther</a>
+                            <a class="dropdown-item" href="">New Orleans Saints</a>
+                            <a class="dropdown-item" href="">Tampa Bay Buccaneers</a>
+                        </div>
+                      </div>
+                  </div>
+                <li class="nav-item"><a class="nav-link" href="./player-search.html">Players</a></li>
+              </ul>
+          </nav>
+      </div>
+    </div>
+</header>
   <div class="container text-center">
-    <div class="row align-items-start">
-      <div class="col">
-        One of three columns
+    <div class="row">
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        one of three columns1
+        <section class="col-one">
+          <article class="Favorites">
+            <div class="Favorites-container">
+              <header class="Favorites-Header">
+                <h2 class="Favorites-Header">
+                  FAVOITES
+
+                </h2>
+
+              </header>
+
+            </div>
+
+          </article>
+
+        </section>
       </div>
-      <div class="col">
-        One of three columns
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        One of three columns2
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/NFLheading.jpg" class="d-block w-100" alt="NFL1">
+            </div>
+            <div class="carousel-item">
+              <img src="images/NFL2.jpg" class="d-block w-100" alt="NFL2">
+            </div>
+            <div class="carousel-item">
+              <img src="images/NFL3.jpg" class="d-block w-100" alt="NFL3">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+       </div>
       </div>
-      <div class="col">
-        One of three columns
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        One of three columns3
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        fourth column
       </div>
     </div>
   </div>
@@ -51,7 +169,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
