--- a/test.html
+++ b/test.html
@@ -1,31 +1,22 @@
-<li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="teamsDropdown" data-bs-toggle="dropdown">
-      Teams
-    </a>
-    <div class="dropdown-menu p-3" style="width: 400px;">
-      <div class="row">
-        <!-- AFC -->
-        <div class="col-6">
-          <h6>AFC</h6>
-          <ul class="list-unstyled">
-            <li><a href="#">AFC East</a></li>
-            <li><a href="#">AFC North</a></li>
-            <li><a href="#">AFC South</a></li>
-            <li><a href="#">AFC West</a></li>
-          </ul>
-        </div>
-        
-        <!-- NFC -->
-        <div class="col-6">
-          <h6>NFC</h6>
-          <ul class="list-unstyled">
-            <li><a href="#">NFC East</a></li>
-            <li><a href="#">NFC North</a></li>
-            <li><a href="#">NFC South</a></li>
-            <li><a href="#">NFC West</a></li>
-          </ul>
-        </div>
-      </div>
+<div class="col-sm-4">
+  <div class="card">
+    <div class="card-header">
+      <h5>One of three columns1</h5>
     </div>
-  </li>
-  This second approach uses the Bootstrap grid system within the 
+    <div class="card-body">
+      <section class="super-bowl-section">
+        <article class="super-bowl">
+          <div class="super-bowl-container">
+            <header>
+              <h2>Super Bowl '24</h2>
+            </header>
+            <ul class="super-bowl-list">
+              <li>Philadelphia Eagles W 40-22</li>
+              <li>Kansas City Chiefs L</li>
+            </ul>
+          </div>
+        </article>
+      </section>
+    </div>
+  </div>
+</div>
