--- a/Players/player-search.html
+++ b/Players/player-search.html
@@ -18,6 +18,7 @@
           <div class="col-12">
             <div>
               <nav>
+<!--Teams Dropdown-->                
                 <ul class="nav justify-content-center">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-light" href="#" id="teamsdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,11 +90,13 @@
                       </div>
                     </div>
                   </li>
+<!--players link-->                  
                   <li class="nav-item">
                     <a class="nav-link text-light" href="./player-search.html">Players</a>
                   </li>
+<!--Account link-->                  
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="account-profile">
+                    <a class="nav-link text-light" href="#" id="account-profile">
                       <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                         <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                       </svg>
@@ -104,6 +107,18 @@
           </div>
         </div>
     </header>
+    <div class="col-12">
+      <div class="row">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid justify-content-center">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
