--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!--header-->  
   <header>
     <div class="container-fluid">
       <div class="row">
@@ -18,6 +19,7 @@
       <div class="col-12">
         <div>
           <nav>
+<!--teams dropdown-->            
             <ul class="nav justify-content-center">
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="teamsdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,9 +91,11 @@
                   </div>
                 </div>
               </li>
+<!--players page-->              
               <li class="nav-item">
                 <a class="nav-link text-light" href="./Players/player-search.html">Players</a>
               </li>
+<!--Account-->              
               <li class="nav-item">
                 <a class="nav-link text-light" href="#" id="account-profile">
                   <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
@@ -104,6 +108,7 @@
       </div>
     </div>
 </header>
+<!--superbowl section/ column 1-->
   <div class="container text-center" style="margin-top: 15px;">
     <div class="row">
       <div class="col-sm-4">
@@ -117,6 +122,7 @@
          </div>      
       </div>
     </section>
+<!--carousel/ column 2-->    
       <div class="col-sm-4">
         <section class="col-two">
         <div id="carouselExample" class="carousel slide">
@@ -142,6 +148,7 @@
        </div>
       </div>
     </section>
+<!--top stats section-->
       <div class="col-sm-4">
         <div class="card" style="width: 100%;">
           <div class="card-header bg-dark text-white">
