added some players to the list on the players page and did some bootstrap coloring to the player page as well. resturctured the page so that the content didnt reach the full viewport width

--- a/Players/player-search.html
+++ b/Players/player-search.html
@@ -107,18 +107,73 @@
           </div>
         </div>
     </header>
-    <div class="col-12">
+
+    <!-- Main content with container like index page -->
+    <div class="container text-center" style="margin-top: 15px;">
       <div class="row">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid justify-content-center">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+        <div class="col-12">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+            <div class="container-fluid justify-content-center">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
         </div>
-      </nav>
+      </div>
+      
+      <div class="card text-center">
+        <div class="card-header bg-danger">
+          PLAYERS
+        </div>
+        <div class="card-body bg-dark">
+          <div class="card">
+            <div class="card-body bg-dark text-light">
+              <img src="../images/Joe-burrow.png" style="max-width: 5rem;" alt="">
+              Joe Burrow - Cincinnati Bengals - 2020-Present
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body bg-dark">
+          <div class="card">
+            <div class="card-body bg-dark text-light">
+              <img src="../images/Joe-burrow.png" style="max-width: 5rem;" alt="">
+              Joe Burrow - Cincinnati Bengals - 2020-Present
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body bg-dark">
+          <div class="card">
+            <div class="card-body bg-dark text-light">
+              <img src="../images/Joe-burrow.png" style="max-width: 5rem;" alt="">
+              Joe Burrow - Cincinnati Bengals - 2020-Present
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body bg-dark">
+          <div class="card">
+            <div class="card-body bg-dark text-light">
+              <img src="../images/Joe-burrow.png" style="max-width: 5rem;" alt="">
+              Joe Burrow - Cincinnati Bengals - 2020-Present
+            </div>
+          </div>
+        </div>
+
+        <div class="card-body bg-dark">
+          <div class="card">
+            <div class="card-body bg-dark text-light">
+              <img src="../images/Joe-burrow.png" style="max-width: 5rem;" alt="">
+              Joe Burrow - Cincinnati Bengals - 2020-Present
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
