--- a/Players/player-search.html
+++ b/Players/player-search.html
@@ -12,7 +12,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-              <h1>GridIron Metrics</h1>      
+              <h1><a href="../index.html" class="text-decoration-none text text-white">GridIron Metrics</a></h1>      
             </div>
           </div>
           <div class="col-12">
